# nodusdb

./: .dockerignore  Cargo.toml  README.md  SECURITY.md  clippy.toml  compose.yaml  justfile  nodus.toml.example
.github/workflows/: ci.yml  fuzz.yml  release.yml
benchmarks/: README.md
benchmarks/reports/: README.md
benchmarks/workloads/: storage_engine.md
crates/nodus_audit/: Cargo.toml
crates/nodus_audit/src/: lib.rs
crates/nodus_authz/: Cargo.toml
crates/nodus_authz/src/: lib.rs
crates/nodus_backup/: Cargo.toml
crates/nodus_backup/src/: lib.rs  s3.rs
crates/nodus_catalog/: Cargo.toml
crates/nodus_catalog/src/: descriptors.rs  lib.rs  memory_catalog.rs  rbac_descriptors.rs  requests.rs  traits.rs
crates/nodus_cli/: Cargo.toml
crates/nodus_cli/src/: main.rs
crates/nodus_common/: Cargo.toml
crates/nodus_common/src/: lib.rs  versioned.rs
crates/nodus_config/: Cargo.toml
crates/nodus_config/src/: lib.rs
crates/nodus_error/: Cargo.toml
crates/nodus_executor/: Cargo.toml
crates/nodus_executor/src/: aggregates.rs  catalog_views.rs  constraints.rs  ddl.rs  dml.rs  execute.rs  filter_eval.rs  information_schema.rs  lib.rs  pg_catalog.rs  phase1_tests.rs  phase2_tests.rs  phase3_tests.rs  plan_types.rs  planner.rs  select.rs  session_vars.rs  set_ops.rs  streaming.rs  streaming_tests.rs  system_views.rs  table_functions.rs  tests.rs  transactions.rs  value.rs  view_helpers.rs
crates/nodus_executor/src/planner/: expressions.rs  mod.rs  predicates.rs  query.rs  statement.rs
crates/nodus_import/: Cargo.toml
crates/nodus_import/src/: copy_decoder.rs  lib.rs  splitter.rs
crates/nodus_index/: Cargo.toml
crates/nodus_index/src/: backfill.rs  lib.rs
crates/nodus_meta/: Cargo.toml
crates/nodus_meta/src/: lib.rs
crates/nodus_monitoring/: Cargo.toml
crates/nodus_monitoring/src/: lib.rs
crates/nodus_mvcc/: Cargo.toml
crates/nodus_mvcc/src/: lib.rs
crates/nodus_pgwire/: Cargo.toml
crates/nodus_pgwire/src/: client_meta.rs  copy.rs  encoding.rs  extended_query.rs  lib.rs  server.rs  simple_query.rs  startup.rs  streaming.rs  type_map.rs  wire_format.rs
crates/nodus_raftstore/: Cargo.toml
crates/nodus_raftstore/src/: lib.rs  network.rs  server.rs
crates/nodus_security/: Cargo.toml
crates/nodus_security/src/: lib.rs  scram.rs
crates/nodus_server/: Cargo.toml
crates/nodus_server/src/: admin.rs  lib.rs  main.rs  multi_raft.rs  raft_catalog.rs  raft_kv.rs  raft_router.rs  raft_shard_meta.rs  raft_upgrade.rs  tls.rs
crates/nodus_sharding/: Cargo.toml
crates/nodus_sharding/src/: lib.rs
crates/nodus_sql/: Cargo.toml
crates/nodus_sql/src/: lib.rs
crates/nodus_storage_api/: Cargo.toml
crates/nodus_storage_api/src/: lib.rs
crates/nodus_storage_btree/: Cargo.toml
crates/nodus_storage_btree/benches/: engine_bench.rs
crates/nodus_storage_btree/src/: lib.rs
crates/nodus_storage_lsm/: Cargo.toml
crates/nodus_storage_lsm/benches/: engine_bench.rs
crates/nodus_storage_lsm/src/: lib.rs  sstable.rs
crates/nodus_storage_mem/: Cargo.toml
crates/nodus_storage_mem/src/: lib.rs
crates/nodus_storage_redb/: Cargo.toml
crates/nodus_storage_redb/src/: lib.rs
crates/nodus_storage_wal/: Cargo.toml
crates/nodus_storage_wal/src/: lib.rs
crates/nodus_telemetry/: Cargo.toml
crates/nodus_telemetry/src/: lib.rs
crates/nodus_testkit/: Cargo.toml
crates/nodus_testkit/src/: cluster.rs  lib.rs
crates/nodus_testkit/src/fault/: mod.rs
crates/nodus_testkit/tests/: integration_test.rs  pgwire_test.rs  session_test.rs  sim_test.rs
crates/nodus_txn/: Cargo.toml
crates/nodus_txn/src/: lib.rs
crates/nodus_upgrade/: Cargo.toml
crates/nodus_upgrade/src/: lib.rs
crates/nodus_web_console/: Cargo.toml
crates/nodus_web_console/src/: lib.rs
deploy/: README.md  docker-compose.yml  nodus.example.toml
deploy/docker/: Dockerfile  alerts.yml  entrypoint.sh  prometheus.yml
deploy/grafana/: nodusdb-dashboard.json
deploy/helm/nodusdb/: Chart.yaml  values.yaml
deploy/systemd/: nodusd.service
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BrandMark.tsx  Dashboard.tsx  NodeStrip.tsx  PermissionExplorer.tsx  StatCard.tsx  StatusBadge.tsx  StatusStrip.tsx  brand.ts
frontend/src/stories/: Brand.stories.tsx  Dashboard.stories.tsx  NodeStrip.stories.tsx  PermissionExplorer.stories.tsx  StatCard.stories.tsx  StatusBadge.stories.tsx  StatusStrip.stories.tsx
tests/compatibility/: Cargo.toml  README.md
tests/compatibility/jdbc/: build.gradle  settings.gradle
tests/compatibility/jdbc/src/test/java/com/nodusdb/jdbc/: JdbcFeatureCoverageTest.java
tests/compatibility/npgsql/: EfCoreMigrationTests.cs  Nodus.Npgsql.Compatibility.Tests.csproj  NpgsqlCompatibilityTests.cs
tests/compatibility/tests/: jdbc_smoke.rs  npgsql_smoke.rs  pg18_admin.rs  pg18_adv_types.rs  pg18_catalog.rs  pg18_dql.rs  pg18_indexes.rs  pg18_schema_table.rs  pg18_types_constraints.rs  pg18_views.rs  pgwire_smoke.rs  scram_auth.rs  tls_handshake.rs
tests/distributed/: Cargo.toml
tests/distributed/tests/: cluster_smoke.rs  sim_test.rs
tests/fault/: Cargo.toml
tests/fault/src/: lib.rs
tests/fault/tests/: recovery.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_raft_command.rs  fuzz_sql_parser.rs  fuzz_wal_record.rs
tests/integration/: Cargo.toml
tests/integration/tests/: admin_api.rs  cluster.rs  crud_postgres.rs  pg_client_coverage.rs  server_smoke.rs
tests/sqllogictest/: Cargo.toml
tests/sqllogictest/cases/: adv_arrays.slt  adv_json.slt  adv_window.slt  baseline_supported.slt  cov_defaults.slt  cov_exists.slt  cov_fromless_where.slt  cov_grouping.slt  cov_nulls_order.slt  cov_recursive_cte.slt  cov_upsert.slt  cov_where_expr.slt  cov_window_frames.slt  cov_window_more.slt  datetime.slt  ddl_alter_table.slt  ddl_create_table.slt  ddl_views_index_schema.slt  dml_basic.slt  dml_constraints.slt  dml_foreign_key.slt  dml_returning.slt  dql_aggregates.slt  dql_joins.slt  (+30 more)
(+11 files in other folders)
