[workspace]
members = [
    "crates/nodus_server",
    "crates/nodus_cli",
    "crates/nodus_common",
    "crates/nodus_config",
    "crates/nodus_error",
    "crates/nodus_monitoring",
    "crates/nodus_testkit",
    "crates/nodus_pgwire",
    "crates/nodus_sql",
    "crates/nodus_executor",
    "crates/nodus_catalog",
    "crates/nodus_meta",
    "crates/nodus_sharding",
    "crates/nodus_upgrade",
    "crates/nodus_security",
    "crates/nodus_authz",
    "crates/nodus_audit",
    "crates/nodus_web_console",
    "crates/nodus_storage_mem",
    "crates/nodus_storage_lsm",
    "crates/nodus_storage_wal",
    "crates/nodus_mvcc",
    "crates/nodus_index",
    "crates/nodus_txn",
    "crates/nodus_raftstore",
    "crates/nodus_backup",
    "crates/nodus_import",
    "crates/nodus_telemetry",
    "tests/integration",
    "tests/compatibility",
    "tests/sqllogictest",
    "tests/fault",
    "tests/distributed",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Aleksandr Pavlov <ckidoz@gmail.com>"]
license = "MIT"
repository = "https://github.com/kidoz/nodusdb"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
prometheus-client = "0.25.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
pgwire = "0.40.3"
sqlparser = "0.62.0"
postgres-types = { version = "0.2.14", features = ["array-impls", "derive", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres = "0.7.18"
async-trait = "0.1.89"
futures-util = "0.3.32"
uuid = { version = "1.23.4", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
bytes = "1.12.0"
openraft = { version = "0.9.24", features = ["serde"] }
sha2 = "0.11.0"
proptest = "1.11.0"
criterion = "0.8.2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }
