[package]
name = "nodus_authz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
nodus_security = { path = "../nodus_security" }
[lints]
workspace = true
