[package]
name = "nodus_backup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
bytes.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
sha2.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_monitoring = { path = "../nodus_monitoring" }