[package]
name = "nodus_backup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
bytes.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
sha2.workspace = true
futures-util.workspace = true
object_store = { version = "0.14.0", features = ["aws"] }
nodus_catalog = { path = "../nodus_catalog" }
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_storage_wal = { path = "../nodus_storage_wal" }
nodus_monitoring = { path = "../nodus_monitoring" }

[dev-dependencies]
nodus_storage_mem = { path = "../nodus_storage_mem" }

[lints]
workspace = true
