[package]
name = "nodus_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
nodus_monitoring = { path = "../nodus_monitoring" }