[package]
name = "nodus_config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
figment.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
[lints]
workspace = true
