[package]
name = "nodus_executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
nodus_sql = { path = "../nodus_sql" }
nodus_catalog = { path = "../nodus_catalog" }
nodus_txn = { path = "../nodus_txn" }
nodus_sharding = { path = "../nodus_sharding" }
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_authz = { path = "../nodus_authz" }
nodus_security = { path = "../nodus_security" }
nodus_audit = { path = "../nodus_audit" }
nodus_meta = { path = "../nodus_meta" }
nodus_storage_mem = { path = "../nodus_storage_mem" }
nodus_storage_lsm = { path = "../nodus_storage_lsm" }
bytes.workspace = true
chrono.workspace = true
sqlparser.workspace = true
serde_json.workspace = true