[package]
name = "nodus_index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
tokio.workspace = true
serde_json.workspace = true
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_catalog = { path = "../nodus_catalog" }
nodus_txn = { path = "../nodus_txn" }
nodus_storage_mem = { path = "../nodus_storage_mem", optional = true }

[dev-dependencies]
nodus_storage_mem = { path = "../nodus_storage_mem" }
[lints]
workspace = true
