[package]
name = "nodus_meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
nodus_storage_api = { path = "../nodus_storage_api" }
serde_json.workspace = true
bytes.workspace = true
async-trait.workspace = true
