[package]
name = "nodus_mvcc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
nodus_storage_api = { path = "../nodus_storage_api" }