[package]
name = "nodus_pgwire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pgwire.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
postgres-types.workspace = true
async-trait.workspace = true
futures-util.workspace = true
bytes.workspace = true
chrono.workspace = true
nodus_sql = { path = "../nodus_sql" }
nodus_executor = { path = "../nodus_executor" }
nodus_import = { path = "../nodus_import" }
nodus_monitoring = { path = "../nodus_monitoring" }
nodus_security = { path = "../nodus_security" }
nodus_catalog = { path = "../nodus_catalog" }
nodus_telemetry = { path = "../nodus_telemetry" }
serde_json.workspace = true
uuid.workspace = true
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
