[package]
name = "nodus_raftstore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
openraft.workspace = true
tokio.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_sharding = { path = "../nodus_sharding" }
reqwest.workspace = true
axum.workspace = true
serde_json.workspace = true