[package]
name = "nodus_security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
sha2.workspace = true
chrono.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
[lints]
workspace = true
