[package]
name = "nodus_security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
# sha2 0.11 pairs with hmac 0.13 (digest 0.11) for PBKDF2-HMAC-SHA256.
sha2 = "0.11.0"
hmac = "0.13.0"
subtle = "2.6.1"
base64 = "0.22.1"
chrono.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
[lints]
workspace = true
