[package]
name = "nodus_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
nodus_common = { path = "../nodus_common" }
nodus_config = { path = "../nodus_config" }
nodus_error = { path = "../nodus_error" }
nodus_monitoring = { path = "../nodus_monitoring" }
nodus_pgwire = { path = "../nodus_pgwire" }
nodus_web_console = { path = "../nodus_web_console" }
nodus_executor = { path = "../nodus_executor" }
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_storage_lsm = { path = "../nodus_storage_lsm" }
nodus_txn = { path = "../nodus_txn" }
nodus_authz = { path = "../nodus_authz" }
nodus_security = { path = "../nodus_security" }
nodus_catalog = { path = "../nodus_catalog" }
nodus_audit = { path = "../nodus_audit" }
nodus_backup = { path = "../nodus_backup" }
nodus_telemetry = { path = "../nodus_telemetry" }
nodus_upgrade = { path = "../nodus_upgrade" }
nodus_sharding = { path = "../nodus_sharding" }
nodus_meta = { path = "../nodus_meta" }
uuid.workspace = true
bytes.workspace = true
serde_json.workspace = true
tokio-rustls = "0.26"
rustls-pemfile = "2"
hex = "0.4.3"
nodus_raftstore = { path = "../nodus_raftstore" }
openraft.workspace = true
nodus_storage_mem = { version = "0.1.0", path = "../nodus_storage_mem" }
serde.workspace = true
nodus_storage_wal = { version = "0.1.0", path = "../nodus_storage_wal" }
