[package]
name = "nodus_storage_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
uuid.workspace = true
nodus_catalog = { path = "../nodus_catalog" }