[package]
name = "nodus_storage_redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
redb.workspace = true
nodus_storage_api = { path = "../nodus_storage_api" }
nodus_mvcc = { path = "../nodus_mvcc" }

[dev-dependencies]
tempfile = "3.10.1"