[package]
name = "nodus_storage_wal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
byteorder = "1.5.0"
bytes.workspace = true
nodus_storage_api = { path = "../nodus_storage_api" }