[package]
name = "nodus_telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "testing"] }
# Use the *blocking* reqwest client: opentelemetry_sdk 0.32's batch processor
# drives the exporter from a dedicated OS thread with no Tokio runtime, so an
# async (`reqwest-client`) HTTP client panics with "there is no reactor running".
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }

[dev-dependencies]
# In-process OTLP/HTTP collector for CI: verifies the export network path
# without a standalone collector.
axum = "0.8.9"

[lints]
workspace = true
