[package]
name = "nodus_upgrade"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
nodus_catalog = { path = "../nodus_catalog" }
chrono.workspace = true
async-trait.workspace = true

[lints]
workspace = true
