[package]
name = "nodus_compatibility_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nodus_testkit = { path = "../../crates/nodus_testkit" }
bytes.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
