[package]
name = "nodus_compatibility_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nodus_testkit = { path = "../../crates/nodus_testkit" }
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
