[package]
name = "nodus_compatibility_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nodus_testkit = { path = "../../crates/nodus_testkit" }
nodus_config = { path = "../../crates/nodus_config" }
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
# Raw-socket SCRAM-SHA-256 client handshake for the wire-level smoke tests.
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
# TLS end-to-end coverage: generate a throwaway server cert and drive a real
# rustls-backed client handshake through tokio-postgres.
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-postgres-rustls = "0.13"
