[package]
name = "nodus_fault_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nodus_testkit = { path = "../../crates/nodus_testkit" }

[dev-dependencies]
nodus_config = { path = "../../crates/nodus_config" }
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
